some JVM tuning for tomee embedded test suite