@@ -275,7 +275,7 @@
                 </goals>
                 <configuration>
                   <skip>${skip.embedded}</skip>
-                  <argLine>-XX:+CMSClassUnloadingEnabled</argLine>
+                  <argLine>-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M</argLine>
                   <systemPropertyVariables>
                     <tomee.version>${project.version}</tomee.version>
                     <arquillian.launch>tomee-embedded</arquillian.launch>
@@ -461,6 +461,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
             <executions>
               <execution>
                 <id>test-tomee-embedded</id>
@@ -470,6 +471,7 @@
                 </goals>
                 <configuration>
                   <skip>${maven.test.skip}</skip>
+                  <argLine>-XX:MaxPermSize=512M</argLine>
                   <systemPropertyVariables>
                     <tomee.version>${project.version}</tomee.version>
                     <arquillian.launch>tomee-embedded</arquillian.launch>
